cluster/uptime-kuma/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-headless
  namespace: uptime-kuma
  labels:
    app: uptime-kuma
spec:
  ports:
    - port: 3001
      name: web-headless
  clusterIP: None
  selector:
    app: uptime-kuma
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-svc
  namespace: uptime-kuma
  labels:
    app: uptime-kuma
spec:
  type: ClusterIP
  selector:
    app: uptime-kuma
  ports:
    - protocol: TCP
      port: 3001
      name: http
      targetPort: 3001
