cluster/uptime-kuma/uptime_kuma_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-ingress
  namespace: uptime-kuma
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/upgrade-proxy: "true"
    nginx.ingress.kubernetes.io/enable-websockets: "true"
spec:
  ingressClassName: nginx-ntnu
  tls:
    - hosts:
        - status.login.no
  rules:
    - host: status.login.no
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: uptime-kuma-svc
                port:
                  number: 3001
