cluster/uptime-kuma/network_policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: uptime-kuma
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-except-internal
  namespace: uptime-kuma
spec:
  podSelector:
    matchLabels:
      app: uptime-kuma
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress
  namespace: uptime-kuma
spec:
  podSelector:
    matchLabels:
      app: uptime-kuma
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nginx-ingress-ntnu
      ports:
        - port: 3001
          protocol: TCP
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nginx-ingress-ntnu

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kube-dns
  namespace: uptime-kuma
spec:
  podSelector:
    matchLabels:
      app: uptime-kuma
  policyTypes:
    - Ingress
    - Egress
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-scrape
  namespace: uptime-kuma
spec:
  podSelector:
    matchLabels:
      app: uptime-kuma
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: prometheus
    ports:
    - protocol: TCP
      port: 3001

# Allows ingress from tekkom-bot to uptime-kuma
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-bot-ingress
  namespace: uptime-kuma
spec:
  podSelector:
    matchLabels:
      app: uptime-kuma
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tekkom-bot
          podSelector:
            matchLabels:
              app: tekkom-bot
      ports:
        - protocol: TCP
          port: 3001

# Allows ingress from scouterbee to uptime-kuma
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-scouterbee-ingress
  namespace: uptime-kuma
spec:
  podSelector:
    matchLabels:
      app: uptime-kuma
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: scouterbee
          podSelector:
            matchLabels:
              app: scouterbee
      ports:
        - protocol: TCP
          port: 3001

# Allows ingress from beekeeper to uptime-kuma
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-scouterbee-ingress
  namespace: uptime-kuma
spec:
  podSelector:
    matchLabels:
      app: uptime-kuma
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: beekeeper
          podSelector:
            matchLabels:
              app: beekeeper-frontend
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: beekeeper
          podSelector:
            matchLabels:
              app: beekeeper-api
      ports:
        - protocol: TCP
          port: 3001
